Update Portuguese translations

--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -1,23 +1,24 @@
 # Portuguese (Portugal) translation for nala.
-# Copyright (C) 2022 Blake Lee
+# Copyright (C) 2024 Blake Lee
 # This file is distributed under the same license as the nala project.
 # Translators:
-# Hugo Carvalho <hugokarvalho@hotmail.com>, 2022, 2023.
+# Hugo Carvalho <hugokarvalho@hotmail.com>, 2022, 2023, 2024.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: nala 0.11.1\n"
 "Report-Msgid-Bugs-To: https://gitlab.com/volian/nala/-/issues\n"
 "POT-Creation-Date: 2024-01-23 23:24-0600\n"
-"PO-Revision-Date: 2023-12-01 21:27+0000\n"
+"PO-Revision-Date: 2024-03-18 10:52+0000\n"
 "Last-Translator: Hugo Carvalho <hugokarvalho@hotmail.com>\n"
-"Language: pt_PT\n"
 "Language-Team: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: pt_PT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.4.2\n"
 
 #. Answers for the Question prompt "[Y/n]"
 #: nala/utils.py:66
@@ -37,8 +38,12 @@ msgstr ""
 "Quis dizer {correction}?"
 
 #: nala/utils.py:346
-msgid "{error} Some packages are unable to be authenticated. Use '-o APT::Get::AllowUnauthenticated=true' with `--yes`"
-msgstr "{error} Alguns pacotes não puderam ser autenticados. Usar '-o APT::Get::AllowUnauthenticated=true' com `--yes`"
+msgid ""
+"{error} Some packages are unable to be authenticated. Use '-o APT::Get::"
+"AllowUnauthenticated=true' with `--yes`"
+msgstr ""
+"{error} Alguns pacotes não puderam ser autenticados. Usar '-o APT::Get::"
+"AllowUnauthenticated=true' com `--yes`"
 
 #: nala/utils.py:361
 msgid "{error} failed regex compilation '{error_msg} at position {position}'"
@@ -87,10 +92,11 @@ msgstr "Atualizar lista de pacotes."
 #: nala/nala.py:253
 msgid "Upgrade the system by removing/installing/upgrading packages."
 msgstr ""
+"Atualizar o sistema através da remoção/instalação/atualização de pacotes."
 
 #: nala/nala.py:255
 msgid "Upgrade the system by upgrading packages only."
-msgstr ""
+msgstr "Atualizar o sistema apenas através da atualização de pacotes."
 
 #: nala/nala.py:260
 msgid "Specify packages to exclude during upgrade. Accepts glob*"
@@ -134,7 +140,8 @@ msgstr "Purga automática de pacotes que não são mais necessários."
 
 #: nala/nala.py:433
 msgid "{error} {config} must be used with either {autoremove} or {autopurge}."
-msgstr "{error} {config} deve ser utilizado apenas com {autoremove} ou {autopurge}"
+msgstr ""
+"{error} {config} deve ser utilizado apenas com {autoremove} ou {autopurge}"
 
 #: nala/nala.py:448
 msgid "Show package details."
@@ -214,11 +221,14 @@ msgstr "A purgar ficheiros de configuração para {package}"
 
 #: nala/install.py:209
 msgid "{notice} Selected packages cannot be excluded from upgrade safely."
-msgstr "{notice} Os pacotes selecionados não podem ser excluídos da actualização em segurança."
+msgstr ""
+"{notice} Os pacotes selecionados não podem ser excluídos da actualização em "
+"segurança."
 
 #: nala/install.py:231
 msgid "{error} Unable to calculate how to protect the selected packages"
-msgstr "{error} Não foi possível calcular como proteger os pacotes selecionados"
+msgstr ""
+"{error} Não foi possível calcular como proteger os pacotes selecionados"
 
 #: nala/install.py:237
 msgid "{notice} The following packages need to be protected as well:"
@@ -321,8 +331,11 @@ msgid "Notices:"
 msgstr "Avisos:"
 
 #: nala/install.py:1207
-msgid "{error} It can be dangerous to continue without a terminal. Use `--assume-yes`"
-msgstr "{error} Pode ser perigoso continuar sem um terminal. Usar `--assume-yes`"
+msgid ""
+"{error} It can be dangerous to continue without a terminal. Use `--assume-"
+"yes`"
+msgstr ""
+"{error} Pode ser perigoso continuar sem um terminal. Usar `--assume-yes`"
 
 #: nala/install.py:1214
 msgid "{warning} Using {switch} can be very dangerous!"
@@ -366,7 +379,8 @@ msgstr "Versão não candidata"
 
 #: nala/cache.py:130
 msgid "{error} unable to find any packages by globbing {pkg}"
-msgstr "{error} não foi possível encontrar nenhum pacote utilizando globbing em {pkg}"
+msgstr ""
+"{error} não foi possível encontrar nenhum pacote utilizando globbing em {pkg}"
 
 #: nala/cache.py:194
 msgid "{warn} Virtual Packages like {package} can't be removed."
@@ -382,7 +396,8 @@ msgstr "A proteger {package} da remoção automática"
 
 #: nala/cache.py:263
 msgid "{total} packages can be upgraded. Run '{command}' to see them."
-msgstr "{total} pacotes podem ser atualizados. Executar \"{command}\" para vê-los."
+msgstr ""
+"{total} pacotes podem ser atualizados. Executar \"{command}\" para vê-los."
 
 #: nala/cache.py:299
 msgid "{package} is a virtual package provided by:"
@@ -429,12 +444,19 @@ msgid "{dependency} conflicts with {package} {version}"
 msgstr "{dependency} em conflito com {package} {version}"
 
 #: nala/error.py:60
-msgid "{error} python-apt gave us {apt_err} This isn't a proper error as it's empty"
-msgstr "{error} o python-apt gerou {apt_err} Este não é um erro adequado, pois está vazio"
+msgid ""
+"{error} python-apt gave us {apt_err} This isn't a proper error as it's empty"
+msgstr ""
+"{error} o python-apt gerou {apt_err} Este não é um erro adequado, pois está "
+"vazio"
 
 #: nala/error.py:122
-msgid "{notice} Some index files failed to download. They have been ignored, or old ones used instead."
-msgstr "{notice} Alguns ficheiros de índice não foram transferidos. Foram ignorados, ou em vez disso foram utilizados os antigos."
+msgid ""
+"{notice} Some index files failed to download. They have been ignored, or old "
+"ones used instead."
+msgstr ""
+"{notice} Alguns ficheiros de índice não foram transferidos. Foram ignorados, "
+"ou em vez disso foram utilizados os antigos."
 
 #: nala/error.py:137
 msgid "{error} Installation has failed."
@@ -658,7 +680,8 @@ msgstr "Estes espelhos estão bem?"
 
 #: nala/fetch.py:303
 msgid "Mirrors you want to keep, separated by space or comma {selection}:"
-msgstr "Espelhos que deseja manter, separados por espaço ou vírgula {selection}:"
+msgstr ""
+"Espelhos que deseja manter, separados por espaço ou vírgula {selection}:"
 
 #: nala/fetch.py:325
 msgid "{error} Index {index} doesn't exist."
@@ -690,7 +713,9 @@ msgstr "A analisar lista de espelhos"
 
 #: nala/fetch.py:660
 msgid "Score is how many milliseconds it takes to download the Release file"
-msgstr "A pontuação é quantos milissegundos são necessários para transferir o ficheiro Release"
+msgstr ""
+"A pontuação é quantos milissegundos são necessários para transferir o "
+"ficheiro Release"
 
 #: nala/fetch.py:755
 msgid "{notice} Nala was unable to fetch {num} mirrors."
@@ -742,7 +767,9 @@ msgstr "Adicionar repositórios contrib e non-free."
 
 #: nala/fetch.py:841
 msgid "Run fetch uninteractively. Will still prompt for overwrite."
-msgstr "Executar o fetch de forma não interativa. Ainda irá solicitar para gravar por cima."
+msgstr ""
+"Executar o fetch de forma não interativa. Ainda irá solicitar para gravar "
+"por cima."
 
 #: nala/fetch.py:850
 msgid "Choose only mirrors of a specific ISO country code."
@@ -875,8 +902,12 @@ msgid "local install"
 msgstr "instalado localmente"
 
 #: nala/show.py:309
-msgid "{notice} There are {num} additional records. Please use the {switch} switch to see them."
-msgstr "{notice} Existem {num} registos adicionais. Usar o comutador {switch} para vê-los."
+msgid ""
+"{notice} There are {num} additional records. Please use the {switch} switch "
+"to see them."
+msgstr ""
+"{notice} Existem {num} registos adicionais. Usar o comutador {switch} para "
+"vê-los."
 
 #: nala/show.py:325
 msgid "{error} {package} has no version to show"
@@ -929,7 +960,9 @@ msgstr "Sem descrição"
 
 #: nala/options.py:60
 msgid "{notice} Unable to read config file: {filename}. Using defaults"
-msgstr "{notice} Incapaz de ler o ficheiro de configuração: {filename}. A usar a predefinição"
+msgstr ""
+"{notice} Incapaz de ler o ficheiro de configuração: {filename}. A usar a "
+"predefinição"
 
 #: nala/options.py:73
 msgid "{error} Config key '{key}' should be a bool not {value}"
@@ -987,7 +1020,7 @@ msgstr "Alternar atualização completa"
 
 #: nala/options.py:502
 msgid "Force color or no color."
-msgstr ""
+msgstr "Forçar cor ou nenhuma cor."
 
 #: nala/options.py:508
 msgid "Toggle updating the package list."
@@ -1071,29 +1104,38 @@ msgstr "Remover `nala-sources.list`."
 
 #: nala/options.py:675
 msgid "Run fetch uninteractively. Will still prompt for overwrite"
-msgstr "Executar o fetch de forma não interativa. Ainda irá solicitar para gravar por cima"
+msgstr ""
+"Executar o fetch de forma não interativa. Ainda irá solicitar para gravar "
+"por cima"
 
 #: nala/options.py:684
 msgid "Show this message and exit."
 msgstr "Mostra esta mensagem e sai."
 
 #: nala/history.py:85
-msgid "{error} '{command}' for operations other than install or remove are not currently supported"
-msgstr "{error} '{command}' para operações que não sejam instalar ou remover não são suportadas atualmente"
+msgid ""
+"{error} '{command}' for operations other than install or remove are not "
+"currently supported"
+msgstr ""
+"{error} '{command}' para operações que não sejam instalar ou remover não são "
+"suportadas atualmente"
 
 #: nala/history.py:89
 msgid ""
 "Show transaction history.\n"
 "\n"
-"Running `nala history` with no subcommands prints an overview of all transactions."
+"Running `nala history` with no subcommands prints an overview of all "
+"transactions."
 msgstr ""
 "Mostrar histórico de transações.\n"
 "\n"
-"Executar `nala history` sem sub-comandos mostra uma visão geral de todas as transações."
+"Executar `nala history` sem sub-comandos mostra uma visão geral de todas as "
+"transações."
 
 #: nala/history.py:104
 msgid "{error} History file seems corrupt. You should try removing {file}"
-msgstr "{error} O ficheiro do histórico parece corrompido. Deve tentar remover {file}"
+msgstr ""
+"{error} O ficheiro do histórico parece corrompido. Deve tentar remover {file}"
 
 #: nala/history.py:123 nala/history.py:321 nala/history.py:342
 msgid "{error} No history exists."
@@ -1215,7 +1257,9 @@ msgstr "{notice} O Nala removeu {filename}"
 
 #: nala/downloader.py:109
 msgid "{error} Failed to move archive file, {str_err}: '{file1}' -> '{file2}'"
-msgstr "{error} Falha ao mover o ficheiro de arquivo, {str_err}: '{file1}' -> '{file2}'"
+msgstr ""
+"{error} Falha ao mover o ficheiro de arquivo, {str_err}: '{file1}' -> "
+"'{file2}'"
 
 #: nala/downloader.py:112
 msgid "{error} {filename} does not exist!"
@@ -1244,10 +1288,12 @@ msgstr ""
 #: nala/downloader.py:232
 msgid ""
 "{error} Improper Hash Syntax\n"
-"  Try '{url}:sha256:510b0c4f8fc3e7bd7182b53c0b81c1a113bea9fd3c18219eac0e18e601dc8d17'"
+"  Try '{url}:"
+"sha256:510b0c4f8fc3e7bd7182b53c0b81c1a113bea9fd3c18219eac0e18e601dc8d17'"
 msgstr ""
 "{error} Sintaxe de hash imprópria\n"
-"  Experimente '{url}:sha256:510b0c4f8fc3e7bd7182b53c0b81c1a113bea9fd3c18219eac0e18e601dc8d17'"
+"  Experimente '{url}:"
+"sha256:510b0c4f8fc3e7bd7182b53c0b81c1a113bea9fd3c18219eac0e18e601dc8d17'"
 
 #: nala/downloader.py:298
 msgid "Exiting due to {signal}"
@@ -1282,8 +1328,12 @@ msgid "{error} Some packages were unable to be authenticated"
 msgstr "{error} Alguns pacotes não puderam ser autenticados"
 
 #: nala/downloader.py:548
-msgid "{notice} Configuration is set to allow installation of unauthenticated packages."
-msgstr "{notice} A configuração está definida para permitir a instalação de pacotes não autenticados."
+msgid ""
+"{notice} Configuration is set to allow installation of unauthenticated "
+"packages."
+msgstr ""
+"{notice} A configuração está definida para permitir a instalação de pacotes "
+"não autenticados."
 
 #: nala/downloader.py:558
 msgid "{error} {url} timed out"
@@ -1319,7 +1369,8 @@ msgstr "No modo de transferência apenas. Não voltar para o apt_pkg."
 
 #: nala/downloader.py:903
 msgid "{warning} Falling back to apt_pkg. The following downloads failed:"
-msgstr "{warning} A voltar para o apt_pkg. As seguintes transferências falharam:"
+msgstr ""
+"{warning} A voltar para o apt_pkg. As seguintes transferências falharam:"
 
 #: nala/__main__.py:44
 msgid "Exiting at your request."
@@ -1502,11 +1553,14 @@ msgstr "Ctrl+C duas vezes rapidamente irá sair"
 #~ msgstr "Não é uma escolha válida"
 
 #~ msgid ""
-#~ "{error} It is not secure to download a package without a hashsum verification.\n"
-#~ "  If you are sure you do NOT want verification, use '-o APT::Get::AllowUnauthenticated=true'"
+#~ "{error} It is not secure to download a package without a hashsum "
+#~ "verification.\n"
+#~ "  If you are sure you do NOT want verification, use '-o APT::Get::"
+#~ "AllowUnauthenticated=true'"
 #~ msgstr ""
 #~ "{error} Não é seguro transferir um pacote sem uma verificação hashsum.\n"
-#~ "  Se tem a certeza que NÃO quer verificação, usar '-o APT::Get::AllowUnauthenticated=true'"
+#~ "  Se tem a certeza que NÃO quer verificação, usar '-o APT::Get::"
+#~ "AllowUnauthenticated=true'"
 
 #~ msgid "Update package list and upgrade the system."
 #~ msgstr "Atualiza a lista de pacotes e atualiza o sistema."
@@ -1515,8 +1569,8 @@ msgstr "Ctrl+C duas vezes rapidamente irá sair"
 #~ msgstr "{error} Os seguintes argumentos hook são inválidos: {args}"
 
 #~ msgid "{error} The following {hook_type} commands cannot be found."
-#~ msgstr "{error} Não foi possível encontrar os seguintes comandos {hook_type}."
+#~ msgstr ""
+#~ "{error} Não foi possível encontrar os seguintes comandos {hook_type}."
 
 #~ msgid "The above mirrors will be written to {file}. Continue?"
 #~ msgstr "Os espelhos acima serão gravados em {file}. Continuar?"
-
