--- a/po/tr.po
+++ b/po/tr.po
@@ -1,18 +1,18 @@
-
 msgid ""
 msgstr ""
 "Project-Id-Version: nala 0.10.0\n"
 "Report-Msgid-Bugs-To: https://gitlab.com/volian/nala/-/issues\n"
 "POT-Creation-Date: 2024-06-03 00:23-0500\n"
-"PO-Revision-Date: 2022-08-06 18:55+0300\n"
+"PO-Revision-Date: 2024-06-05 10:24+0300\n"
 "Last-Translator: Mehmet Akif <madanadam@gmail.com>\n"
-"Language: tr\n"
 "Language-Team: tr <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.14.0\n"
+"X-Generator: Poedit 3.4.4\n"
 
 #: nala/options.py:60
 msgid "{notice} Unable to read config file: {filename}. Using defaults"
@@ -66,7 +66,7 @@ msgstr "Önerilen paketleri kurmayı aç/kapat."
 
 #: nala/options.py:488
 msgid "Set the default release to install packages from."
-msgstr ""
+msgstr "Paketleri yüklemek için varsayılan sürümü ayarlayın."
 
 #: nala/options.py:495
 msgid "Toggle full-upgrade"
@@ -74,7 +74,7 @@ msgstr "Tam yükseltmeyi değiştir"
 
 #: nala/options.py:502
 msgid "Force color or no color."
-msgstr ""
+msgstr "Renkli veya renksiz olsun."
 
 #: nala/options.py:508
 msgid "Toggle updating the package list."
@@ -82,7 +82,7 @@ msgstr "Paket listesini güncellemeyi aç/kapat."
 
 #: nala/options.py:515
 msgid "Toggle a more condensed transaction summary."
-msgstr ""
+msgstr "Daha yoğun bir işlem özeti göster."
 
 #: nala/options.py:523
 msgid "Purge any packages that would be removed."
@@ -98,7 +98,7 @@ msgstr "Temel paketlerin kaldırılmasına izin ver."
 
 #: nala/options.py:546
 msgid "Toggle fix broken packages."
-msgstr "Bozuk paketleri düzeltmeyi aç/kapat"
+msgstr "Bozuk paketleri düzeltmeyi aç/kapat."
 
 #: nala/options.py:555
 msgid "Assume 'yes' or 'no' to all prompts."
@@ -182,9 +182,8 @@ msgstr ""
 "{correction} mi demek istediniz?"
 
 #: nala/utils.py:346
-#, fuzzy
 msgid "{error} Some packages are unable to be authenticated. Use '-o APT::Get::AllowUnauthenticated=true' with `--yes`"
-msgstr "{error} Bazı paketler doğrulanamadı!"
+msgstr "{error} Bazı paketler doğrulanamadı. '-o APT::Get::AllowUnauthenticated=true' seçeneğini `--yes` ile kullanın"
 
 #: nala/utils.py:361
 msgid "{error} failed regex compilation '{error_msg} at position {position}'"
@@ -192,11 +191,11 @@ msgstr "{error} düzenli ifade derlemesi başarısız oldu '{error_msg} {positio
 
 #: nala/utils.py:372
 msgid "{error} Nala needs root to fix broken packages"
-msgstr "Nala'nın bozuk paketleri onarması için root'a ihtiyacı var"
+msgstr "{error} Nala bozuk paketleri onarmak için root olmalı"
 
 #: nala/utils.py:377
 msgid "{error} Nala needs root to {command}"
-msgstr "{error} Nala'nın {command} için root'a ihtiyacı var"
+msgstr "{error} Nala {command} için root gerekiyor"
 
 #: nala/utils.py:402
 msgid "{error} Nala is already running another instance {last_pid}"
@@ -239,7 +238,7 @@ msgstr "Otomatik Temizle/Otomatik Temizleniyor/Otomatik Temizlendi"
 #. This ends up looking like [ "Auto-Remove 20 Packages" ]
 #: nala/summary.py:49
 msgid "Auto-Remove/Auto-Removing/Auto-Removed"
-msgstr "Otomatik Kaldır/Otomatik Kaldırılıyor/Otomatik Kaldırıldı"
+msgstr "Otomatik Kaldırılacak/Otomatik Kaldırılıyor/Otomatik Kaldırıldı"
 
 #. Verb Tenses are [ "Present/Present Participle/Past" ]
 #. This ends up looking like [ "Remove 20 Packages" ]
@@ -257,7 +256,7 @@ msgstr "Temizle/Temizleniyor/Temizlendi"
 #. This ends up looking like [ "Install 20 Packages" ]
 #: nala/summary.py:64
 msgid "Install/Installing/Installed"
-msgstr "Yükle/Yükleniyor/Yüklendi"
+msgstr "Yüklenecek/Yükleniyor/Yüklendi"
 
 #. Verb Tenses are [ "Present/Present Participle/Past" ]
 #. This ends up looking like [ "Reinstall 20 Packages" ]
@@ -269,7 +268,7 @@ msgstr "Y.Yükle/Y.Yükleniyor/Y.Yüklendi"
 #. This ends up looking like [ "Upgrade 20 Packages" ]
 #: nala/summary.py:74
 msgid "Upgrade/Upgrading/Upgraded"
-msgstr "Güncelle/Güncelleniyor/Güncellendi"
+msgstr "Güncellenecek/Güncelleniyor/Güncellendi"
 
 #. Verb Tenses are [ "Present/Present Participle/Past" ]
 #. This ends up looking like [ "Downgrade 20 Packages" ]
@@ -293,11 +292,11 @@ msgstr "Önerilen, Kurulmayacak"
 
 #: nala/summary.py:279 nala/summary.py:297
 msgid "Kept Back, Will Not Be Upgraded"
-msgstr ""
+msgstr "Tutulacak, Yükseltilmeyecek"
 
 #: nala/summary.py:279 nala/summary.py:297
 msgid "Kept Back"
-msgstr ""
+msgstr "Tutulacak"
 
 #: nala/summary.py:281
 msgid "Auto-Removable, Will Not Be Removed"
@@ -314,15 +313,15 @@ msgstr "Paket"
 
 #: nala/summary.py:397 nala/summary.py:490
 msgid "Total download size"
-msgstr "Toplam indirme boyutu:"
+msgstr "Toplam indirme boyutu"
 
 #: nala/summary.py:399 nala/summary.py:492
 msgid "Disk space to free"
-msgstr "Boşalacak disk alanı.:"
+msgstr "Boşalacak disk alanı"
 
 #: nala/summary.py:401 nala/summary.py:494
 msgid "Disk space required"
-msgstr "Gerekecek disk alanı.:"
+msgstr "Gerekecek disk alanı"
 
 #: nala/summary.py:405 nala/summary.py:498
 msgid "Nala will only download the packages"
@@ -370,7 +369,7 @@ msgstr "{notice} Yeniden başlatma gerekli."
 
 #: nala/install.py:523
 msgid "Finished Successfully"
-msgstr "Başarıyla Tamamlandı."
+msgstr "Başarıyla Tamamlandı"
 
 #: nala/install.py:600
 msgid "{notice} The following will be installed to satisfy {package}:"
@@ -393,11 +392,12 @@ msgid ""
 "{error} No content length in response from {url}\n"
 "  Ensure the URL points to a Debian Package"
 msgstr ""
+"{error} {url} 'dan hiç içerik yanıtı yok\n"
+" URL'nin bir Debian paketini gösterdiğinden emin olun"
 
 #: nala/install.py:742
-#, fuzzy
 msgid "{notice} {filename} can't be hashsum verified."
-msgstr "{notice} {filename} bütünlük açısından kontrol edilemiyor."
+msgstr "{notice} {filename} hashsum doğrulanamadı."
 
 #: nala/install.py:747 nala/install.py:1220
 msgid "Do you want to continue?"
@@ -409,16 +409,15 @@ msgstr "İptal."
 
 #: nala/install.py:791
 msgid "{error} Hash does not match the '{hash_type}' Length"
-msgstr ""
+msgstr "{error} Hash '{hash_type}' uzunluğuyla eşleşmedi"
 
 #: nala/install.py:798
 msgid "{error} Hash Type '{hash_type}' specified with no hash"
-msgstr ""
+msgstr "{error} Hash Türü '{hash_type}' hash olmadan belirtildi"
 
 #: nala/install.py:805
-#, fuzzy
 msgid "{error} Hash Type '{hash_type}' is unsupported"
-msgstr "{error} {distro} {release} desteklenmiyor."
+msgstr "{error} Hash Türü '{hash_type}' desteklenmiyor"
 
 #: nala/install.py:963
 msgid "{error} Version {version} not found for package {package}"
@@ -514,7 +513,7 @@ msgstr "Hata raporu göndermek istiyorsanız lütfen '{debug_file}' ekleyin"
 
 #: nala/error.py:160
 msgid "Are you root?"
-msgstr "root musun"
+msgstr "Root musun?"
 
 #: nala/error.py:169
 msgid "{error} The following packages are essential!"
@@ -573,9 +572,8 @@ msgid "{package} but the cache version is {version}"
 msgstr "{package} ancak önbellek sürümü {version}"
 
 #: nala/error.py:405
-#, fuzzy
 msgid "{package} but it cannot be installed"
-msgstr "{package} ancak yüklenemiyor"
+msgstr "{package} ama yüklenemiyor"
 
 #: nala/error.py:518
 msgid "{package} has been unmarked."
@@ -617,10 +615,9 @@ msgstr ""
 
 #: nala/fetch.py:289
 msgid "Are these mirrors okay?"
-msgstr "Bu yansılar doğru?\""
+msgstr "Bu yansılar doğru mu?"
 
 #: nala/fetch.py:303
-#, fuzzy
 msgid "Mirrors you want to keep, separated by space or comma {selection}:"
 msgstr "Tutmak istediğiniz yansılar boşlukla ayrılmıştır {selection}:"
 
@@ -630,11 +627,11 @@ msgstr "{error} {index} dizini mevcut değil."
 
 #: nala/fetch.py:335
 msgid "{error} {value_error}"
-msgstr ""
+msgstr "{error} {value_error}"
 
 #: nala/fetch.py:345
 msgid "{error} Parser: {parser}"
-msgstr ""
+msgstr "{error} Parser: {parser}"
 
 #: nala/fetch.py:376
 msgid "Fetching {distro} mirrors"
@@ -642,7 +639,7 @@ msgstr "{distro} yansıları getiriliyor\""
 
 #: nala/fetch.py:424
 msgid "{error} Internal Error. Distro detection must be broken"
-msgstr "{error} İç Hata. Dağıtım tanılama bozulmuş olmalı."
+msgstr "{error} İç Hata. Dağıtım tanılama bozulmuş olmalı"
 
 #: nala/fetch.py:439
 msgid "{error} unable to connect to {mirror}"
@@ -654,7 +651,7 @@ msgstr "Yansı listesi ayrıştırılıyor"
 
 #: nala/fetch.py:660
 msgid "Score is how many milliseconds it takes to download the Release file"
-msgstr "Sonuç, Sürüm dosyasını indirmek için geçen milisaniye sayısıdır."
+msgstr "Sonuç, Sürüm dosyasını indirmek için geçen milisaniye sayısıdır"
 
 #: nala/fetch.py:755
 msgid "{notice} Nala was unable to fetch {num} mirrors."
@@ -966,11 +963,11 @@ msgstr "Geçmiş değiştirildi"
 
 #: nala/history.py:458
 msgid "Undo a transaction."
-msgstr "İşlemi geri al"
+msgstr "İşlemi geri al."
 
 #: nala/history.py:459
 msgid "Redo a transaction."
-msgstr "İşlemi tekrarla"
+msgstr "İşlemi tekrarla."
 
 #: nala/history.py:502
 msgid "{warning} This history entry was a purge."
@@ -1125,7 +1122,7 @@ msgstr "Paket Listesi Güncelleniyor"
 
 #: nala/dpkg.py:987
 msgid "{warning} Quitting now could break your system!"
-msgstr "{warning} Şimdi çıkmak sisteminizi bozabilir!\""
+msgstr "{warning} Şimdi çıkmak sisteminizi bozabilir!"
 
 #: nala/dpkg.py:991
 msgid "Ctrl+C twice quickly will exit"
@@ -1174,9 +1171,8 @@ msgid "{last_completed} {package}"
 msgstr "{last_completed} {package}"
 
 #: nala/downloader.py:108
-#, fuzzy
 msgid "{notice} Nala has removed {filename}"
-msgstr "{notice} Nala, {filename} dosyasını kaldırdı ama başka yansıyı deneyecek"
+msgstr "{notice} Nala {filename} dosyasını kaldırdı"
 
 #: nala/downloader.py:109
 msgid "{error} Failed to move archive file, {str_err}: '{file1}' -> '{file2}'"
@@ -1211,6 +1207,8 @@ msgid ""
 "{error} Improper Hash Syntax\n"
 "  Try '{url}:sha256:510b0c4f8fc3e7bd7182b53c0b81c1a113bea9fd3c18219eac0e18e601dc8d17'"
 msgstr ""
+"{error} Uygunsuz Hash Yazımı\n"
+"   '{url}:sha256:510b0c4f8fc3e7bd7182b53c0b81c1a113bea9fd3c18219eac0e18e601dc8d17' dene"
 
 #: nala/downloader.py:298
 msgid "Exiting due to {signal}"
@@ -1233,9 +1231,8 @@ msgid "{error} No more mirrors available for {filename}"
 msgstr "{error} {filename} için başka yansı yok"
 
 #: nala/downloader.py:527
-#, fuzzy
 msgid "{notice} Trying next url: {url}"
-msgstr "Sonraki adres deneniyor: {url}"
+msgstr "{notice} Sonraki adres deneniyor: {url}"
 
 #: nala/downloader.py:536
 msgid "{warning} The following packages cannot be authenticated!"
@@ -1243,7 +1240,7 @@ msgstr "{warning} Aşağıdaki paketler doğrulanamadı!"
 
 #: nala/downloader.py:543
 msgid "{error} Some packages were unable to be authenticated"
-msgstr "{error} Bazı paketler doğrulanamadı!"
+msgstr "{error} Bazı paketler doğrulanamadı"
 
 #: nala/downloader.py:548
 msgid "{notice} Configuration is set to allow installation of unauthenticated packages."
@@ -1287,7 +1284,7 @@ msgstr "{warning} apt_pkg'a geri dönüyor. Aşağıdaki indirmeler başarısız
 
 #: nala/search.py:109
 msgid "{package} [local]"
-msgstr "{package} [local]"
+msgstr "{package} [yerel]"
 
 #. Formatting looks as below:
 #. vim 2:8.2.3995-1+b2 [Debian/sid main]
@@ -1348,11 +1345,11 @@ msgstr "Paket listesini güncelleyin."
 
 #: nala/nala.py:253
 msgid "Upgrade the system by removing/installing/upgrading packages."
-msgstr ""
+msgstr "Paketleri kaldırarak/yükleyerek/güncelleyerek sistemi yükseltin."
 
 #: nala/nala.py:255
 msgid "Upgrade the system by upgrading packages only."
-msgstr ""
+msgstr "Sistemi yalnızca paketleri güncelleyerek yükseltin."
 
 #: nala/nala.py:260
 msgid "Specify packages to exclude during upgrade. Accepts glob*"
@@ -1484,11 +1481,6 @@ msgstr "Dikkat:"
 #~ msgid "Not a valid choice kiddo"
 #~ msgstr "Geçerli bir seçim değil evlat"
 
-#~ msgid ""
-#~ "{error} It is not secure to download a package without a hashsum verification.\n"
-#~ "  If you are sure you do NOT want verification, use '-o APT::Get::AllowUnauthenticated=true'"
-#~ msgstr ""
-
 #~ msgid "Update package list and upgrade the system."
 #~ msgstr "Paket listesini güncelleyin ve sistemi yükseltin."
 
@@ -1500,4 +1492,3 @@ msgstr "Dikkat:"
 
 #~ msgid "The above mirrors will be written to {file}. Continue?"
 #~ msgstr "Yukarıdaki yansılar {file} dosyasına yazılacak. Devam edilsin mi?"
-
